# lexikos

./: .gitignore  MANIFEST.in  README.md  eval.py  lexicon.py  pyproject.toml  requirements.txt  run.sh  run_translation.py  setup.cfg  setup.py
dict/cmudict-ipa/: cmudict-0.7b-ipa-segmented.csv
dict/wikipron/: eng_latn.tsv  eng_latn_au_broad.tsv
examples/: export_onnx.py  optimize_onnx.py  quantize_onnx.py  run_eval.sh  run_export_onnx.sh  run_optimize_onnx.sh  run_quantize_onnx.sh
examples/grapheme-to-phoneme/: eval.py  run_optimize_onnx.sh
examples/logs/onnx-byt5-small-wikipron-eng-latn-uk-broad-optimized-quantized-arm64/: log.json  metrics.txt
examples/logs/onnx-byt5-small-wikipron-eng-latn-uk-broad-quantized-arm64/: log.json
examples/phoneme-to-grapheme/: eval.py  run_eval.sh  run_multi.sh  run_translation.py  run_v1.sh
lexikos/: __init__.py  g2p.py  lexicon.py  normalizer.py  t5.py  utils.py
lexikos/dict/asr-data/: austalk_en_au.tsv
lexikos/dict/synthetic/: bookbot_en_v1-v2_lexicon.tsv  bookbot_en_v1-v2_lexicon_zipformer.tsv  common-voice-accent-au_lexicon.tsv  common-voice-accent-ca_lexicon.tsv  common-voice-accent-gb_lexicon.tsv  common-voice-accent-id_lexicon.tsv  l2-arctic-en-cn_lexicon.tsv  (+19 more)
notebooks/: benchmark.py  en-id-transliteration.ipynb  export-dataset.ipynb  extracted-lexicon.ipynb  normalize-wikipron.ipynb  segment_cmudict_ipa.ipynb
notebooks/logs/: benchmark_2023-06-02 10:38:33.405809.txt  benchmark_2023-06-05 04:02:23.511324.txt
notebooks/standardized_wikipron/: eng_latn_au.tsv  eng_latn_nz.tsv  eng_latn_uk.tsv  eng_latn_us.tsv
(+20 files in other folders)
