[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexikos"
version = "0.0.1b"
description = "A collection of pronunciation dictionaries and neural grapheme-to-phoneme models."
readme = "README.md"
authors = [{ name="w11wo", email="wilson@bookbotkids.com" }, { name="anantoj", email="gg.ananto@gmail.com" }, { name="DavidSamuell", email="davidsamuel.7878@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
keywords = ["linguistics", "pronunciation-dictionary", "g2p", "grapheme-to-phoneme", "neural-g2p"]

[project.urls]
"Homepage" = "https://github.com/bookbot-hive/lexikos"
"Bug Tracker" = "https://github.com/bookbot-hive/lexikos/issues"